# finm-acf-hft

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  justfile
assignments/: PHASE01.md  PHASE02.md  PHASE03.md  PHASE04.md
benchmarks/: bench.cpp
benchmarks/results/: bench_all_O0-O3.txt  bench_detail.txt
discussions/: report.typ
include/: kernels.hpp
scripts/: bench_all.py  sysinfo.sh  viz.py
src/: StochasticProcesses.cpp  StochasticProcesses.h  hft_client.cpp  hft_server.cpp  kernels.cpp  main.cpp  profile_driver.cpp
tests/: correctness.cpp
